# EloTracker

./: README.md  pyproject.toml
elo_tracker/: __init__.py  __main__.py  cli.py  storage.py
